--- a/app/views/dummy_widget/show.html.erb
+++ b/app/views/dummy_widget/show.html.erb
@@ -1,6 +1,4 @@
-<% if !widget.is_valid? && !scrivito_in_editable_view? %>
-  <%= render template: "shared/expired" %>
-<% else %>
+<% unless !widget.is_valid? && !scrivito_in_editable_view? %>
   <%= scrivito_tag(:h3, widget, :title) %>
   <div>
     <%= scrivito_tag(:p, widget, :body) %>
