--- a/app/views/dummy_widget/show.html.erb
+++ b/app/views/dummy_widget/show.html.erb
@@ -1,4 +1,4 @@
-<% unless !widget.active? && !scrivito_in_editable_view? %>
+<% if is_active? widget %>
   <%= scrivito_tag(:h3, widget, :title) %>
   <div>
     <%= scrivito_tag(:p, widget, :body) %>
