--- a/app/views/image_widget/details.html.erb
+++ b/app/views/image_widget/details.html.erb
@@ -5,3 +5,11 @@
 <%= scrivito_details_for("Image") do %>
   <%= scrivito_image_tag(widget, :image, class: "img-responsive") %>
 <% end %>
+
+<%= scrivito_details_for("Valid From") do %>
+  <%= scrivito_tag(:div, widget, :valid_from) %>
+<% end %>
+
+<%= scrivito_details_for("Valid Until") do %>
+  <%= scrivito_tag(:div, widget, :valid_until) %>
+<% end %>
